--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "long-haul",
-  "version": "0.0.0",
-  "description": "A minimal, type-focused Jekyll theme. ",
+  "name": "diving-into-azure",
+  "version": "0.0.1",
+  "description": "A blog about Azure and other things",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,14 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "1.0.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-sass": "^2.1.0"
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^3.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brianmaierjr/long-haul.git"
+    "url": "https://github.com/johanohlin/johanohlin.gihub.io"
   },
   "keywords": [
     "jekyll",
