Chaning config and upgrading jQuery

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Diving into Azure
-description:
-  Take a deep dive into a selection of all the awesome things Azure has to offer. All
+description: Take a deep dive into a selection of all the awesome things Azure has to offer. All
   mixed up with .Net Core, React, TypeScript and some private projects.
 
 url: https://www.johanohlin.com
